k8s/base/playwright-api-reports-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: playwright-api-reports-service # More descriptive name
spec:
  selector:
    app: playwright-api-tests
  ports:
    - port: 9323
      targetPort: 9323
      name: reports
  type: ClusterIP
