k8s/base/playwright-ui-reports-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: playwright-ui-reports-service
spec:
  selector:
    app: playwright-ui-tests
  ports:
    - port: 9323
      targetPort: 9323
      name: reports
  type: ClusterIP
