k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: playwright-dashboard-service
spec:
  selector:
    app: playwright-dashboard
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
